--- a/stream-cep-poc/streaming-cep-data-generator-app/pom.xml
+++ b/stream-cep-poc/streaming-cep-data-generator-app/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
+  <!-- parent>
     <artifactId>streaming-cep-poc</artifactId>
     <groupId>com.redhat.consulting</groupId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>../</relativePath>
-  </parent>
+  </parent-->
   <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>streaming-cep-poc</artifactId>
+    <groupId>com.redhat.consulting</groupId>
   <artifactId>streaming-cep-data-generator-app</artifactId>
 
   <dependencies>
