--- a/stream-cep-poc/streaming-cep-data-generator-app/pom.xml
+++ b/stream-cep-poc/streaming-cep-data-generator-app/pom.xml
@@ -10,9 +10,9 @@
   </parent-->
   <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streaming-cep-poc</artifactId>
     <groupId>com.redhat.consulting</groupId>
   <artifactId>streaming-cep-data-generator-app</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
