--- a/stream-cep-poc/streaming-cep-data-generator-app/pom.xml
+++ b/stream-cep-poc/streaming-cep-data-generator-app/pom.xml
@@ -10,9 +10,18 @@
   </parent-->
   <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.redhat.consulting</groupId>
-  <artifactId>streaming-cep-data-generator-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+ <groupId>com.redhat.consulting</groupId>
+ <artifactId>streaming-cep-data-generator-app</artifactId>
+ <version>1.0-SNAPSHOT</version>
+
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <kafka.version>1.0.1</kafka.version>
+    <vertx.version>3.5.1</vertx.version>
+    <slf4j.version>1.7.25</slf4j.version>
+  </properties>
 
   <dependencies>
     <dependency>
